--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Michael Woolridge — Music Industry Professional</title>
+    <title>Michael Woolridge - Music Industry Professional</title>
     <meta name="description"
-        content="Michael Woolridge — Artist Manager, Publishing & Campaign Specialist with extensive experience across the music industry. Based in the UK.">
-    <meta property="og:title" content="Michael Woolridge — Music Industry Professional">
+        content="Michael Woolridge - Artist Manager, Publishing & Campaign Specialist with extensive experience across the music industry. Based in the UK.">
+    <meta property="og:title" content="Michael Woolridge - Music Industry Professional">
     <meta property="og:description"
         content="Artist Manager, Publishing & Campaign Specialist with extensive experience across the music industry.">
     <meta property="og:type" content="website">
@@ -73,12 +73,12 @@
                 <div class="about-text reveal">
                     <p>Building on a foundation of ten years as a performing musician, Michael transitioned into the
                         business side of music with a First Class degree from the Liverpool Institute for Performing
-                        Arts. During university, he volunteered at festivals, conferences and managed artists — using
+                        Arts. During university, he volunteered at festivals, conferences and managed artists - using
                         every opportunity to deepen his understanding of the industry and build lasting relationships
                         with music professionals.</p>
                     <p>Most recently at Modern Sky Entertainment UK, Michael progressed from a part-time finance
                         assistant into a multifaceted role covering day-to-day artist management, publishing
-                        administration, and campaign delivery — developing a holistic understanding of the music
+                        administration, and campaign delivery - developing a holistic understanding of the music
                         business and serving as a central point of contact between artists and their wider teams.</p>
                     <p>Highly organised, calm under pressure, and thriving in fast-paced environments, Michael is a
                         reliable, detail-driven professional who keeps momentum moving while always prioritising the
@@ -119,9 +119,9 @@
 
                 <!-- Modern Sky -->
                 <div class="timeline-item reveal">
-                    <div class="timeline-date">November 2021 — June 2025</div>
+                    <div class="timeline-date">November 2021 - June 2025</div>
                     <div class="timeline-role">Day-to-Day Artist Manager, Finance / Publishing Assistant</div>
-                    <div class="timeline-company">Modern Sky Entertainment (UK) Limited — Liverpool</div>
+                    <div class="timeline-company">Modern Sky Entertainment (UK) Limited - Liverpool</div>
                     <div class="timeline-desc">
                         Progressed from part-time finance assistant into a central, multifaceted role spanning
                         day-to-day artist management, publishing administration, and campaign delivery. Served as the
@@ -141,12 +141,12 @@
 
                 <!-- MJW Management -->
                 <div class="timeline-item reveal">
-                    <div class="timeline-date">September 2017 — June 2020</div>
+                    <div class="timeline-date">September 2017 - June 2020</div>
                     <div class="timeline-role">Freelance Artist Manager</div>
                     <div class="timeline-company">MJW Management</div>
                     <div class="timeline-desc">
                         Founded and ran an independent artist management venture, working closely with artists from the
-                        ground up — developing and guiding their creative vision from project inception. Achieved
+                        ground up - developing and guiding their creative vision from project inception. Achieved
                         notable success including securing an artist "Introducing Track of the Week" on BBC Radio 1,
                         working alongside the local BBC Introducing presenter, which led to a record label signing.
                     </div>
@@ -159,9 +159,9 @@
 
                 <!-- Various Artists Management -->
                 <div class="timeline-item reveal">
-                    <div class="timeline-date">September — December 2019</div>
+                    <div class="timeline-date">September - December 2019</div>
                     <div class="timeline-role">Day-to-Day Management Intern</div>
-                    <div class="timeline-company">Various Artists Management — London</div>
+                    <div class="timeline-company">Various Artists Management - London</div>
                     <div class="timeline-desc">
                         Three-month work placement assisting with tour logistics, booking flights and hotels, organising
                         photo and video shoots, representing the company at corporate events, attending industry
@@ -179,9 +179,9 @@
                 <div class="timeline-item reveal">
                     <div class="timeline-date">August 2019</div>
                     <div class="timeline-role">Management Assistant</div>
-                    <div class="timeline-company">GIGANT — Alta, Finnmark, Norway</div>
+                    <div class="timeline-company">GIGANT - Alta, Finnmark, Norway</div>
                     <div class="timeline-desc">
-                        Volunteer role in northern Norway working with young musicians — conducting artist interviews to
+                        Volunteer role in northern Norway working with young musicians - conducting artist interviews to
                         construct biographies, advising on photo and video shoots, collecting metadata for the Norwegian
                         record label MTG, and providing music industry guidance to participants.
                     </div>
@@ -223,7 +223,7 @@
                     <h3>Campaign Management</h3>
                     <p>Strategic planning and execution of album and touring campaigns from conception to delivery.</p>
                     <ul>
-                        <li>Album campaign rollout planning — timelines, priorities & flow</li>
+                        <li>Album campaign rollout planning - timelines, priorities & flow</li>
                         <li>Digital marketing coordination with label, digital & marketing teams</li>
                         <li>Content scheduling, fan engagement & online activity alignment</li>
                         <li>Merchandise planning and live activity coordination</li>
@@ -258,10 +258,10 @@
         </div>
     </section>
 
-    <!-- Photo Break -->
-    <div class="photo-break">
-        <img src="assets/hero-1.jpg" alt="Michael Woolridge in the music industry" loading="lazy">
-        <div class="photo-break-overlay"></div>
+    <!-- Gradient Break -->
+    <div class="gradient-break">
+        <div class="gradient-break-inner"></div>
+        <div class="gradient-break-line"></div>
     </div>
 
     <!-- Career Highlights -->
@@ -274,9 +274,9 @@
             <div class="highlights-grid">
 
                 <div class="highlight-card reveal">
-                    <h4>Brad Kella — Full Campaign Support</h4>
+                    <h4>Brad Kella - Full Campaign Support</h4>
                     <p>Acted as main day-to-day point of contact for Brad Kella throughout touring, album campaigns,
-                        recording, and corporate events — liaising with booking agents, promoters, PR teams, and
+                        recording, and corporate events - liaising with booking agents, promoters, PR teams, and
                         production crews.</p>
                 </div>
 
@@ -295,12 +295,12 @@
                 <div class="highlight-card reveal reveal-delay-2">
                     <h4>BBC Radio 1 Feature</h4>
                     <p>As an independent manager, secured "Introducing Track of the Week" on BBC Radio 1 for a managed
-                        artist, working from the ground up and building relationships with BBC Introducing — leading to
+                        artist, working from the ground up and building relationships with BBC Introducing - leading to
                         a record label signing.</p>
                 </div>
 
                 <div class="highlight-card reveal reveal-delay-3">
-                    <h4>The Lathums — Robin Park Headline</h4>
+                    <h4>The Lathums - Robin Park Headline</h4>
                     <p>Oversaw merchandise planning and requirements for The Lathums' headline show at Robin Park in
                         Wigan, ensuring commercial objectives were met while maintaining a strong fan experience.</p>
                 </div>
@@ -316,10 +316,10 @@
         </div>
     </section>
 
-    <!-- Photo Break 2 -->
-    <div class="photo-break">
-        <img src="assets/hero-2.jpg" alt="Michael Woolridge" loading="lazy">
-        <div class="photo-break-overlay"></div>
+    <!-- Gradient Break 2 -->
+    <div class="gradient-break variant-2">
+        <div class="gradient-break-inner"></div>
+        <div class="gradient-break-line"></div>
     </div>
 
     <!-- Education & Further Experience -->
@@ -334,7 +334,7 @@
                 <div class="education-main reveal">
                     <div class="education-degree">Liverpool Institute for Performing Arts</div>
                     <div class="education-school">BA Management of Music, Entertainment, Theatre & Events</div>
-                    <div class="education-year">2017 — 2020 · First Class Honours</div>
+                    <div class="education-year">2017 - 2020 · First Class Honours</div>
                     <div class="education-dissertation">
                         <strong>Dissertation:</strong> An Investigation into the Effects of Brands Working with
                         Breakthrough Artists
@@ -345,42 +345,42 @@
                     <h3>Further Experience</h3>
                     <ul class="further-exp-list">
                         <li>
-                            <span class="exp-role"><span class="exp-company">Sound City</span> — Finance & Event
+                            <span class="exp-role"><span class="exp-company">Sound City</span> - Finance & Event
                                 Assistant</span>
-                            <span class="exp-year">2021 — 2025</span>
+                            <span class="exp-year">2021 - 2025</span>
                         </li>
                         <li>
-                            <span class="exp-role"><span class="exp-company">Steaming Kettle PR</span> — PR
+                            <span class="exp-role"><span class="exp-company">Steaming Kettle PR</span> - PR
                                 Assistant</span>
                             <span class="exp-year">2021</span>
                         </li>
                         <li>
-                            <span class="exp-role"><span class="exp-company">GIGANT Norway</span> — Music Team
+                            <span class="exp-role"><span class="exp-company">GIGANT Norway</span> - Music Team
                                 Assistant</span>
                             <span class="exp-year">2019</span>
                         </li>
                         <li>
-                            <span class="exp-role"><span class="exp-company">Island Records</span> — Office
+                            <span class="exp-role"><span class="exp-company">Island Records</span> - Office
                                 Intern</span>
                             <span class="exp-year">2018</span>
                         </li>
                         <li>
-                            <span class="exp-role"><span class="exp-company">Sound City Conference</span> — Key Note
+                            <span class="exp-role"><span class="exp-company">Sound City Conference</span> - Key Note
                                 Speaker Liaison</span>
                             <span class="exp-year">2018</span>
                         </li>
                         <li>
-                            <span class="exp-role"><span class="exp-company">Sound City Festival</span> — Main Stage
+                            <span class="exp-role"><span class="exp-company">Sound City Festival</span> - Main Stage
                                 Management</span>
                             <span class="exp-year">2018</span>
                         </li>
                         <li>
-                            <span class="exp-role"><span class="exp-company">Off The Record Conference</span> — Key Note
+                            <span class="exp-role"><span class="exp-company">Off The Record Conference</span> - Key Note
                                 Speaker Liaison</span>
                             <span class="exp-year">2018</span>
                         </li>
                         <li>
-                            <span class="exp-role"><span class="exp-company">March of the Mods</span> — Event
+                            <span class="exp-role"><span class="exp-company">March of the Mods</span> - Event
                                 Manager</span>
                             <span class="exp-year">2014</span>
                         </li>
@@ -403,7 +403,7 @@
                 </div>
                 <p class="contact-text reveal reveal-delay-1">
                     Whether you're looking for an experienced day-to-day artist manager, a publishing specialist, or a
-                    detail-driven professional to support your campaigns and projects — I'd love to hear from you.
+                    detail-driven professional to support your campaigns and projects - I'd love to hear from you.
                 </p>
                 <div class="contact-links reveal reveal-delay-2">
                     <a href="mailto:mikewoolridge94@gmail.com" class="contact-link">
