linkedin Link working

--- a/index.html
+++ b/index.html
@@ -414,8 +414,8 @@
                         </svg>
                         mikewoolridge94@gmail.com
                     </a>
-                    <a href="https://www.linkedin.com/in/michaelwoolridge-0b2851191" target="_blank"
-                        rel="noopener noreferrer" class="contact-link">
+                    <a href="https://www.linkedin.com/in/michael-woolridge-0b2851191?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Brepw0hirTReqp5tTyuLQvw%3D%3D"
+                        target="_blank" rel="noopener noreferrer" class="contact-link">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="16"
                             height="16">
                             <path
